--- a/index.html
+++ b/index.html
@@ -3,55 +3,159 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UniqueServiceMaster - 1000 Unique Automated Services</title>
+    <title>1000 Automated Services - UniqueServiceMaster</title>
     <style>
         body {
             font-family: Arial, sans-serif;
         }
-        .category-list {
-            list-style-type: none;
+        .service-list {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
         }
-        .category-list li {
-            margin: 10px 0;
+        .category {
+            margin-bottom: 40px;
         }
-        .category-list a {
-            text-decoration: none;
+        .category h2 {
             color: #007bff;
+            font-size: 24px;
         }
-        .category-list a:hover {
-            text-decoration: underline;
+        .services {
+            list-style-type: none;
+            padding-left: 0;
         }
-        .purchase-button {
-            background-color: #28a745;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
-            font-size: 16px;
+        .services li {
+            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to UniqueServiceMaster</h1>
-    <h2>Explore Our 1000 Unique Services</h2>
-    <ul class="category-list">
-        <li><a href="virtual-experiences.html">Virtual Experience Creators</a></li>
-        <li><a href="branding-services.html">AI-Personalized Business Names & Branding</a></li>
-        <li><a href="time-capsule.html">AI-Assisted Time Capsule Creators</a></li>
-        <li><a href="social-trends.html">Algorithm-Generated Social Trends Predictor</a></li>
-        <li><a href="script-generators.html">AI Novel & Script Generators</a></li>
-        <li><a href="metaverse-avatars.html">Custom Digital Avatars for Metaverse Games</a></li>
-        <li><a href="sentiment-analysis.html">Emotional Sentiment Analysis Reports</a></li>
-        <li><a href="meme-generators.html">Niche Meme Generator for Marketing Campaigns</a></li>
-    </ul>
+    <div class="service-list">
+        <h1>Welcome to UniqueServiceMaster's 1000 Unique Automated Services</h1>
 
-    <h3>Purchase a Service</h3>
-    <button class="purchase-button">Purchase Now</button>
+        <!-- AI Tools for Personal Hobbies & Leisure -->
+        <div class="category">
+            <h2>AI Tools for Personal Hobbies & Leisure</h2>
+            <ul class="services">
+                <li>AI-Powered Personalized Knitting Pattern Generator</li>
+                <li>Custom AI Personalized Birdwatching Adventure Planner</li>
+                <li>Personalized AI Personalized Reading List for Book Lovers</li>
+                <li>AI-Based Custom Model Train Setup Planner</li>
+                <li>Custom AI Personalized Genealogy Research Plan</li>
+                <li>AI-Powered Personalized Scrapbooking Layout Ideas</li>
+                <li>Personalized AI Personalized Home Brewing Recipe Suggestions</li>
+                <li>AI-Generated Personalized Astronomy Stargazing Schedule</li>
+                <li>Custom AI Personalized Photography Challenge Ideas</li>
+                <li>Personalized AI Custom Woodworking Project Generator</li>
+            </ul>
+        </div>
 
-    <script>
-        document.querySelector('.purchase-button').addEventListener('click', function() {
-            alert('Purchase integration coming soon!');
-        });
-    </script>
+        <!-- AI Tools for Cooking & Baking Enthusiasts -->
+        <div class="category">
+            <h2>AI Tools for Cooking & Baking Enthusiasts</h2>
+            <ul class="services">
+                <li>AI-Powered Personalized Weekly Dinner Menu Planner</li>
+                <li>Custom AI Personalized Baking Recipe Suggestions for Special Diets</li>
+                <li>Personalized AI Custom Barbecue Recipe Generator</li>
+                <li>AI-Based Custom Cake Decorating Idea Generator</li>
+                <li>Custom AI Personalized International Cuisine Cooking Plan</li>
+                <li>AI-Powered Personalized Spice and Flavor Pairing Suggestions</li>
+                <li>Personalized AI Custom Holiday Meal Planning Guide</li>
+                <li>AI-Generated Personalized Farm-to-Table Recipe Ideas</li>
+                <li>Custom AI Personalized Vegan and Vegetarian Recipe Planner</li>
+                <li>Personalized AI Custom Wine Tasting and Pairing Planner</li>
+            </ul>
+        </div>
+
+        <!-- AI Tools for Entrepreneurs & Startups -->
+        <div class="category">
+            <h2>AI Tools for Entrepreneurs & Startups</h2>
+            <ul class="services">
+                <li>AI-Powered Personalized Business Growth Forecasting Tool</li>
+                <li>Custom AI Personalized Competitor Analysis for Startups</li>
+                <li>Personalized AI Custom Product Development Strategy</li>
+                <li>AI-Based Custom Personalized E-Commerce Store Launch Plan</li>
+                <li>Custom AI Personalized Business Process Automation Strategy</li>
+                <li>AI-Powered Personalized Sales Funnel Optimization Tool</li>
+                <li>Personalized AI Custom Business Rebranding Plan</li>
+                <li>AI-Generated Personalized Customer Acquisition Strategy for Startups</li>
+                <li>Custom AI Personalized Business Scalability Plan</li>
+                <li>Personalized AI Custom Digital Marketing Funnel for Entrepreneurs</li>
+            </ul>
+        </div>
+
+        <!-- Continue with all other categories -->
+        <div class="category">
+            <h2>AI Tools for Parenting & Family Life</h2>
+            <ul class="services">
+                <li>AI-Powered Personalized Family Chore Schedule Generator</li>
+                <li>Custom AI Personalized Homeschool Curriculum Planner</li>
+                <li>Personalized AI Custom Baby Sleep Training Guide</li>
+                <li>AI-Based Custom Family Vacation Planner</li>
+                <li>Custom AI Personalized Sibling Activity Suggestions</li>
+                <li>AI-Powered Personalized Parent-Child Communication Guide</li>
+                <li>Personalized AI Custom Family Budgeting Tool</li>
+                <li>AI-Generated Personalized Parenting Tips for Different Age Groups</li>
+                <li>Custom AI Personalized School Event Planner for Parents</li>
+                <li>Personalized AI Custom Family Movie Night Suggestions</li>
+            </ul>
+        </div>
+
+        <!-- AI Tools for Personal Finance & Budgeting -->
+        <div class="category">
+            <h2>AI Tools for Personal Finance & Budgeting</h2>
+            <ul class="services">
+                <li>AI-Powered Personalized Monthly Budget Planner</li>
+                <li>Custom AI Personalized Debt Reduction Strategy</li>
+                <li>Personalized AI Custom Emergency Savings Plan</li>
+                <li>AI-Based Custom Retirement Savings Strategy for Couples</li>
+                <li>Custom AI Personalized Mortgage Repayment Optimization Plan</li>
+                <li>AI-Powered Personalized Credit Score Improvement Plan</li>
+                <li>Personalized AI Custom Investment Strategy for Beginners</li>
+                <li>AI-Generated Personalized Financial Goal Tracking Tool</li>
+                <li>Custom AI Personalized College Savings Plan for Parents</li>
+                <li>Personalized AI Custom Expense Tracking System</li>
+            </ul>
+        </div>
+
+        <!-- Continue this structure for all remaining categories -->
+        <!-- AI Tools for Real Estate & Property Investment -->
+        <div class="category">
+            <h2>AI Tools for Real Estate & Property Investment</h2>
+            <ul class="services">
+                <li>AI-Powered Personalized Rental Property Investment Strategy</li>
+                <li>Custom AI Personalized Home Flipping Plan</li>
+                <li>Personalized AI Custom Real Estate Market Analysis</li>
+                <li>AI-Based Custom Vacation Rental Income Optimization Tool</li>
+                <li>Custom AI Personalized Home Renovation Return on Investment Calculator</li>
+                <li>AI-Powered Personalized Real Estate Investment Trust (REIT) Portfolio Plan</li>
+                <li>Personalized AI Custom Rental Property Listing Enhancer</li>
+                <li>AI-Generated Personalized Land Investment Analysis Tool</li>
+                <li>Custom AI Personalized Commercial Real Estate Investment Strategy</li>
+                <li>Personalized AI Custom Homebuyer Readiness Assessment Tool</li>
+            </ul>
+        </div>
+
+        <!-- Continue adding all 1000 services in the same format -->
+        <!-- AI Tools for Music Industry -->
+        <div class="category">
+            <h2>AI Tools for Music Industry</h2>
+            <ul class="services">
+                <li>AI-Powered Personalized Music Release Schedule Planner</li>
+                <li>Custom AI Personalized Music Production Tips for Indie Artists</li>
+                <li>Personalized AI Custom Songwriting Inspiration Generator</li>
+                <li>AI-Based Custom Personalized Music Album Concept Generator</li>
+                <li>Custom AI Personalized Gig and Tour Planning Tool for Musicians</li>
+                <li>AI-Powered Personalized Spotify Playlist Growth Strategy</li>
+                <li>Personalized AI Custom Music Marketing Plan for New Artists</li>
+                <li>AI-Generated Personalized Beat-Making Suggestions for Producers</li>
+                <li>Custom AI Personalized Music Collaboration Partner Finder</li>
+                <li>Personalized AI Custom Live Performance Setup Guide for Artists</li>
+            </ul>
+        </div>
+
+        <!-- Add other categories and services accordingly up to 1000 -->
+
+    </div>
 </body>
 </html>
