--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1000 Automated Services - UniqueServiceMaster</title>
+    <title>1000 Automated Services - NicheCraft Automation</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,7 +31,7 @@
 </head>
 <body>
     <div class="service-list">
-        <h1>Welcome to UniqueServiceMaster's 1000 Unique Automated Services</h1>
+        <h1>Welcome to NicheCraft Automation's 1000 Unique Automated Services</h1>
 
         <!-- AI Tools for Personal Hobbies & Leisure -->
         <div class="category">
