--- a/index.html
+++ b/index.html
@@ -3,159 +3,161 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1000 Automated Services - NicheCraft Automation</title>
+    <title>NicheCraft Automation - 1000 Automated Services</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Orbitron', sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            margin: 0;
+            padding: 0;
         }
-        .service-list {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
+
+        /* Futuristic Font */
+        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
+
+        .container {
+            display: flex;
+            height: 100vh;
         }
+
+        /* Side Navigation Bar */
+        nav {
+            width: 250px;
+            background-color: #1c1c1c;
+            padding-top: 20px;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            margin: 20px 0;
+        }
+
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 18px;
+            display: block;
+            padding: 10px 15px;
+            transition: background-color 0.3s;
+        }
+
+        nav ul li a:hover {
+            background-color: #333;
+        }
+
+        .content {
+            flex: 1;
+            padding: 40px;
+            overflow-y: auto;
+        }
+
+        h1 {
+            font-size: 32px;
+            margin-bottom: 20px;
+        }
+
         .category {
             margin-bottom: 40px;
         }
+
         .category h2 {
             color: #007bff;
             font-size: 24px;
+            margin-bottom: 10px;
         }
+
         .services {
-            list-style-type: none;
-            padding-left: 0;
+            list-style-type: decimal;
+            padding-left: 20px;
         }
+
         .services li {
             margin-bottom: 10px;
+        }
+        
+        /* General Styling */
+        .link-btn {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        
+        .link-btn:hover {
+            background-color: #0056b3;
+        }
+
+        footer {
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-    <div class="service-list">
-        <h1>Welcome to NicheCraft Automation's 1000 Unique Automated Services</h1>
-
-        <!-- AI Tools for Personal Hobbies & Leisure -->
-        <div class="category">
-            <h2>AI Tools for Personal Hobbies & Leisure</h2>
-            <ul class="services">
-                <li>AI-Powered Personalized Knitting Pattern Generator</li>
-                <li>Custom AI Personalized Birdwatching Adventure Planner</li>
-                <li>Personalized AI Personalized Reading List for Book Lovers</li>
-                <li>AI-Based Custom Model Train Setup Planner</li>
-                <li>Custom AI Personalized Genealogy Research Plan</li>
-                <li>AI-Powered Personalized Scrapbooking Layout Ideas</li>
-                <li>Personalized AI Personalized Home Brewing Recipe Suggestions</li>
-                <li>AI-Generated Personalized Astronomy Stargazing Schedule</li>
-                <li>Custom AI Personalized Photography Challenge Ideas</li>
-                <li>Personalized AI Custom Woodworking Project Generator</li>
+    <div class="container">
+        <!-- Side Navigation Bar -->
+        <nav>
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="#categories">CATEGORIES</a></li>
+                <li><a href="#services">FULL LIST OF SERVICES</a></li>
+                <li><a href="#">CONTACT</a></li>
+                <li><a href="#">DONATE TO A CHARITY</a></li>
             </ul>
+        </nav>
+
+        <!-- Main Content -->
+        <div class="content">
+            <h1>Welcome to NicheCraft Automation's 1000 Unique Automated Services</h1>
+
+            <!-- Categories and Services -->
+            <div id="categories" class="category">
+                <h2>Category 1: AI Tools for Personal Hobbies & Leisure</h2>
+                <ul class="services">
+                    <li>AI-Powered Personalized Knitting Pattern Generator</li>
+                    <li>Custom AI Personalized Birdwatching Adventure Planner</li>
+                    <li>Personalized AI Personalized Reading List for Book Lovers</li>
+                    <li>AI-Based Custom Model Train Setup Planner</li>
+                    <li>Custom AI Personalized Genealogy Research Plan</li>
+                    <li>AI-Powered Personalized Scrapbooking Layout Ideas</li>
+                    <li>Personalized AI Personalized Home Brewing Recipe Suggestions</li>
+                    <li>AI-Generated Personalized Astronomy Stargazing Schedule</li>
+                    <li>Custom AI Personalized Photography Challenge Ideas</li>
+                    <li>Personalized AI Custom Woodworking Project Generator</li>
+                </ul>
+            </div>
+
+            <div class="category">
+                <h2>Category 2: AI Tools for Cooking & Baking Enthusiasts</h2>
+                <ul class="services">
+                    <li>AI-Powered Personalized Weekly Dinner Menu Planner</li>
+                    <li>Custom AI Personalized Baking Recipe Suggestions for Special Diets</li>
+                    <li>Personalized AI Custom Barbecue Recipe Generator</li>
+                    <li>AI-Based Custom Cake Decorating Idea Generator</li>
+                    <li>Custom AI Personalized International Cuisine Cooking Plan</li>
+                    <li>AI-Powered Personalized Spice and Flavor Pairing Suggestions</li>
+                    <li>Personalized AI Custom Holiday Meal Planning Guide</li>
+                    <li>AI-Generated Personalized Farm-to-Table Recipe Ideas</li>
+                    <li>Custom AI Personalized Vegan and Vegetarian Recipe Planner</li>
+                    <li>Personalized AI Custom Wine Tasting and Pairing Planner</li>
+                </ul>
+            </div>
+
+            <!-- Continue listing categories and services up to 1000 -->
+
+            <!-- Example continues... -->
         </div>
-
-        <!-- AI Tools for Cooking & Baking Enthusiasts -->
-        <div class="category">
-            <h2>AI Tools for Cooking & Baking Enthusiasts</h2>
-            <ul class="services">
-                <li>AI-Powered Personalized Weekly Dinner Menu Planner</li>
-                <li>Custom AI Personalized Baking Recipe Suggestions for Special Diets</li>
-                <li>Personalized AI Custom Barbecue Recipe Generator</li>
-                <li>AI-Based Custom Cake Decorating Idea Generator</li>
-                <li>Custom AI Personalized International Cuisine Cooking Plan</li>
-                <li>AI-Powered Personalized Spice and Flavor Pairing Suggestions</li>
-                <li>Personalized AI Custom Holiday Meal Planning Guide</li>
-                <li>AI-Generated Personalized Farm-to-Table Recipe Ideas</li>
-                <li>Custom AI Personalized Vegan and Vegetarian Recipe Planner</li>
-                <li>Personalized AI Custom Wine Tasting and Pairing Planner</li>
-            </ul>
-        </div>
-
-        <!-- AI Tools for Entrepreneurs & Startups -->
-        <div class="category">
-            <h2>AI Tools for Entrepreneurs & Startups</h2>
-            <ul class="services">
-                <li>AI-Powered Personalized Business Growth Forecasting Tool</li>
-                <li>Custom AI Personalized Competitor Analysis for Startups</li>
-                <li>Personalized AI Custom Product Development Strategy</li>
-                <li>AI-Based Custom Personalized E-Commerce Store Launch Plan</li>
-                <li>Custom AI Personalized Business Process Automation Strategy</li>
-                <li>AI-Powered Personalized Sales Funnel Optimization Tool</li>
-                <li>Personalized AI Custom Business Rebranding Plan</li>
-                <li>AI-Generated Personalized Customer Acquisition Strategy for Startups</li>
-                <li>Custom AI Personalized Business Scalability Plan</li>
-                <li>Personalized AI Custom Digital Marketing Funnel for Entrepreneurs</li>
-            </ul>
-        </div>
-
-        <!-- Continue with all other categories -->
-        <div class="category">
-            <h2>AI Tools for Parenting & Family Life</h2>
-            <ul class="services">
-                <li>AI-Powered Personalized Family Chore Schedule Generator</li>
-                <li>Custom AI Personalized Homeschool Curriculum Planner</li>
-                <li>Personalized AI Custom Baby Sleep Training Guide</li>
-                <li>AI-Based Custom Family Vacation Planner</li>
-                <li>Custom AI Personalized Sibling Activity Suggestions</li>
-                <li>AI-Powered Personalized Parent-Child Communication Guide</li>
-                <li>Personalized AI Custom Family Budgeting Tool</li>
-                <li>AI-Generated Personalized Parenting Tips for Different Age Groups</li>
-                <li>Custom AI Personalized School Event Planner for Parents</li>
-                <li>Personalized AI Custom Family Movie Night Suggestions</li>
-            </ul>
-        </div>
-
-        <!-- AI Tools for Personal Finance & Budgeting -->
-        <div class="category">
-            <h2>AI Tools for Personal Finance & Budgeting</h2>
-            <ul class="services">
-                <li>AI-Powered Personalized Monthly Budget Planner</li>
-                <li>Custom AI Personalized Debt Reduction Strategy</li>
-                <li>Personalized AI Custom Emergency Savings Plan</li>
-                <li>AI-Based Custom Retirement Savings Strategy for Couples</li>
-                <li>Custom AI Personalized Mortgage Repayment Optimization Plan</li>
-                <li>AI-Powered Personalized Credit Score Improvement Plan</li>
-                <li>Personalized AI Custom Investment Strategy for Beginners</li>
-                <li>AI-Generated Personalized Financial Goal Tracking Tool</li>
-                <li>Custom AI Personalized College Savings Plan for Parents</li>
-                <li>Personalized AI Custom Expense Tracking System</li>
-            </ul>
-        </div>
-
-        <!-- Continue this structure for all remaining categories -->
-        <!-- AI Tools for Real Estate & Property Investment -->
-        <div class="category">
-            <h2>AI Tools for Real Estate & Property Investment</h2>
-            <ul class="services">
-                <li>AI-Powered Personalized Rental Property Investment Strategy</li>
-                <li>Custom AI Personalized Home Flipping Plan</li>
-                <li>Personalized AI Custom Real Estate Market Analysis</li>
-                <li>AI-Based Custom Vacation Rental Income Optimization Tool</li>
-                <li>Custom AI Personalized Home Renovation Return on Investment Calculator</li>
-                <li>AI-Powered Personalized Real Estate Investment Trust (REIT) Portfolio Plan</li>
-                <li>Personalized AI Custom Rental Property Listing Enhancer</li>
-                <li>AI-Generated Personalized Land Investment Analysis Tool</li>
-                <li>Custom AI Personalized Commercial Real Estate Investment Strategy</li>
-                <li>Personalized AI Custom Homebuyer Readiness Assessment Tool</li>
-            </ul>
-        </div>
-
-        <!-- Continue adding all 1000 services in the same format -->
-        <!-- AI Tools for Music Industry -->
-        <div class="category">
-            <h2>AI Tools for Music Industry</h2>
-            <ul class="services">
-                <li>AI-Powered Personalized Music Release Schedule Planner</li>
-                <li>Custom AI Personalized Music Production Tips for Indie Artists</li>
-                <li>Personalized AI Custom Songwriting Inspiration Generator</li>
-                <li>AI-Based Custom Personalized Music Album Concept Generator</li>
-                <li>Custom AI Personalized Gig and Tour Planning Tool for Musicians</li>
-                <li>AI-Powered Personalized Spotify Playlist Growth Strategy</li>
-                <li>Personalized AI Custom Music Marketing Plan for New Artists</li>
-                <li>AI-Generated Personalized Beat-Making Suggestions for Producers</li>
-                <li>Custom AI Personalized Music Collaboration Partner Finder</li>
-                <li>Personalized AI Custom Live Performance Setup Guide for Artists</li>
-            </ul>
-        </div>
-
-        <!-- Add other categories and services accordingly up to 1000 -->
-
     </div>
+
+    <!-- Footer -->
+    <footer>
+        <p style="text-align: center;">&copy; 2024 NicheCraft Automation - All Rights Reserved</p>
+    </footer>
 </body>
 </html>
