--- a/about.html
+++ b/about.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About NicheCraft Automation</title>
+    <style>
+        body {
+            font-family: 'Orbitron', sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
+
+        h1 {
+            font-size: 32px;
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+        }
+
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <h1>About NicheCraft Automation</h1>
+    <p>AI-driven, creative, and personalized digital services that target niche, underserved markets. Each service leverages automation, AI, and personalization, ensuring that the solutions are unique, practical, and can scale quickly.</p>
+    <p><a href="index.html">Back to Home</a></p>
+</body>
+</html>
 
