--- a/index.html
+++ b/index.html
@@ -61,38 +61,6 @@
             margin-bottom: 20px;
         }
 
-        .category {
-            margin-bottom: 40px;
-        }
-
-        .category h2 {
-            color: #007bff;
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-
-        .services {
-            list-style-type: decimal;
-            padding-left: 20px;
-        }
-
-        .services li {
-            margin-bottom: 10px;
-        }
-        
-        /* General Styling */
-        .link-btn {
-            background-color: #007bff;
-            color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-        
-        .link-btn:hover {
-            background-color: #0056b3;
-        }
-
         footer {
             margin-top: 20px;
         }
@@ -105,8 +73,8 @@
             <ul>
                 <li><a href="#">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="#categories">CATEGORIES</a></li>
-                <li><a href="#services">FULL LIST OF SERVICES</a></li>
+                <li><a href="categories.html">CATEGORIES</a></li>
+                <li><a href="services.html">FULL LIST OF SERVICES</a></li>
                 <li><a href="#">CONTACT</a></li>
                 <li><a href="#">DONATE TO A CHARITY</a></li>
             </ul>
@@ -115,43 +83,7 @@
         <!-- Main Content -->
         <div class="content">
             <h1>Welcome to NicheCraft Automation's 1000 Unique Automated Services</h1>
-
-            <!-- Categories and Services -->
-            <div id="categories" class="category">
-                <h2>Category 1: AI Tools for Personal Hobbies & Leisure</h2>
-                <ul class="services">
-                    <li>AI-Powered Personalized Knitting Pattern Generator</li>
-                    <li>Custom AI Personalized Birdwatching Adventure Planner</li>
-                    <li>Personalized AI Personalized Reading List for Book Lovers</li>
-                    <li>AI-Based Custom Model Train Setup Planner</li>
-                    <li>Custom AI Personalized Genealogy Research Plan</li>
-                    <li>AI-Powered Personalized Scrapbooking Layout Ideas</li>
-                    <li>Personalized AI Personalized Home Brewing Recipe Suggestions</li>
-                    <li>AI-Generated Personalized Astronomy Stargazing Schedule</li>
-                    <li>Custom AI Personalized Photography Challenge Ideas</li>
-                    <li>Personalized AI Custom Woodworking Project Generator</li>
-                </ul>
-            </div>
-
-            <div class="category">
-                <h2>Category 2: AI Tools for Cooking & Baking Enthusiasts</h2>
-                <ul class="services">
-                    <li>AI-Powered Personalized Weekly Dinner Menu Planner</li>
-                    <li>Custom AI Personalized Baking Recipe Suggestions for Special Diets</li>
-                    <li>Personalized AI Custom Barbecue Recipe Generator</li>
-                    <li>AI-Based Custom Cake Decorating Idea Generator</li>
-                    <li>Custom AI Personalized International Cuisine Cooking Plan</li>
-                    <li>AI-Powered Personalized Spice and Flavor Pairing Suggestions</li>
-                    <li>Personalized AI Custom Holiday Meal Planning Guide</li>
-                    <li>AI-Generated Personalized Farm-to-Table Recipe Ideas</li>
-                    <li>Custom AI Personalized Vegan and Vegetarian Recipe Planner</li>
-                    <li>Personalized AI Custom Wine Tasting and Pairing Planner</li>
-                </ul>
-            </div>
-
-            <!-- Continue listing categories and services up to 1000 -->
-
-            <!-- Example continues... -->
+            <p>Explore our wide range of AI-driven services across various categories by clicking on the links in the navigation bar.</p>
         </div>
     </div>
 
