--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NicheCraft Automation - 1000 Automated Services</title>
+    <title>NicheCraft Automation - Home</title>
     <style>
         body {
             font-family: 'Orbitron', sans-serif;
@@ -63,6 +63,7 @@
 
         footer {
             margin-top: 20px;
+            text-align: center;
         }
     </style>
 </head>
@@ -82,14 +83,14 @@
 
         <!-- Main Content -->
         <div class="content">
-            <h1>Welcome to NicheCraft Automation's 1000 Unique Automated Services</h1>
-            <p>Explore our wide range of AI-driven services across various categories by clicking on the links in the navigation bar.</p>
+            <h1>Welcome to NicheCraft Automation</h1>
+            <p>Explore AI-driven services tailored to niche, underserved markets. Click on the links in the navigation bar to discover more.</p>
         </div>
     </div>
 
     <!-- Footer -->
     <footer>
-        <p style="text-align: center;">&copy; 2024 NicheCraft Automation - All Rights Reserved</p>
+        <p>&copy; 2024 NicheCraft Automation - All Rights Reserved</p>
     </footer>
 </body>
 </html>
