--- a/categories.html
+++ b/categories.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Service Categories - NicheCraft Automation</title>
+    <title>Categories - NicheCraft Automation</title>
     <style>
         body {
             font-family: 'Orbitron', sans-serif;
@@ -68,6 +68,7 @@
 
         footer {
             margin-top: 20px;
+            text-align: center;
         }
     </style>
 </head>
@@ -106,7 +107,7 @@
 
     <!-- Footer -->
     <footer>
-        <p style="text-align: center;">&copy; 2024 NicheCraft Automation - All Rights Reserved</p>
+        <p>&copy; 2024 NicheCraft Automation - All Rights Reserved</p>
     </footer>
 </body>
 </html>
