--- a/services.html
+++ b/services.html
@@ -68,6 +68,7 @@
 
         footer {
             margin-top: 20px;
+            text-align: center;
         }
     </style>
 </head>
@@ -87,7 +88,7 @@
 
         <!-- Main Content -->
         <div class="content">
-            <h1>Full List of 1000 Services</h1>
+            <h1>Full List Of Services</h1>
             <ul class="services">
                 <li>AI-Powered Personalized Knitting Pattern Generator</li>
                 <li>Custom AI Personalized Birdwatching Adventure Planner</li>
@@ -97,4 +98,16 @@
                 <li>AI-Powered Personalized Scrapbooking Layout Ideas</li>
                 <li>Personalized AI Personalized Home Brewing Recipe Suggestions</li>
                 <li>AI-Generated Personalized Astronomy Stargazing Schedule</li>
-                <li>Custom AI Personalized
+                <li>Custom AI Personalized Photography Challenge Ideas</li>
+                <li>Personalized AI Custom Woodworking Project Generator</li>
+                <!-- Continue listing all 1000 services -->
+            </ul>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 NicheCraft Automation - All Rights Reserved</p>
+    </footer>
+</body>
+</html>
