--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <li><a href="#">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="categories.html">CATEGORIES</a></li>
-                <li><a href="services.html">FULL LIST OF SERVICES</a></li>
+                <li><a href="#">FULL LIST OF SERVICES</a></li> <!-- Remove for now -->
                 <li><a href="#">CONTACT</a></li>
                 <li><a href="#">DONATE TO A CHARITY</a></li>
             </ul>
