--- a/categories.html
+++ b/categories.html
@@ -80,7 +80,6 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="categories.html">CATEGORIES</a></li>
-                <li><a href="services.html">FULL LIST OF SERVICES</a></li>
                 <li><a href="#">CONTACT</a></li>
                 <li><a href="#">DONATE TO A CHARITY</a></li>
             </ul>
@@ -90,17 +89,16 @@
         <div class="content">
             <h1>Service Categories</h1>
             <ul class="categories">
-                <li>AI Tools for Personal Hobbies & Leisure</li>
-                <li>AI Tools for Cooking & Baking Enthusiasts</li>
-                <li>AI Tools for Entrepreneurs & Startups</li>
-                <li>AI Tools for Parenting & Family Life</li>
-                <li>AI Tools for Personal Finance & Budgeting</li>
-                <li>AI Tools for Real Estate & Property Investment</li>
-                <li>AI Tools for Music Industry</li>
-                <li>AI Tools for Online Communities & Forums</li>
-                <li>AI Tools for DIY Projects & Home Improvement</li>
-                <li>AI Tools for Freelancers & Consultants</li>
-                <!-- Continue listing all categories -->
+                <li><a href="category1.html">AI Tools for Personal Hobbies & Leisure</a></li>
+                <li><a href="category2.html">AI Tools for Cooking & Baking Enthusiasts</a></li>
+                <li><a href="category3.html">AI Tools for Entrepreneurs & Startups</a></li>
+                <li><a href="category4.html">AI Tools for Parenting & Family Life</a></li>
+                <li><a href="category5.html">AI Tools for Personal Finance & Budgeting</a></li>
+                <li><a href="category6.html">AI Tools for Real Estate & Property Investment</a></li>
+                <li><a href="category7.html">AI Tools for Music Industry</a></li>
+                <li><a href="category8.html">AI Tools for Online Communities & Forums</a></li>
+                <li><a href="category9.html">AI Tools for DIY Projects & Home Improvement</a></li>
+                <li><a href="category10.html">AI Tools for Freelancers & Consultants</a></li>
             </ul>
         </div>
     </div>
