--- a/category1.html
+++ b/category1.html
@@ -92,3 +92,21 @@
                 <li>AI-Powered Personalized Knitting Pattern Generator</li>
                 <li>Custom AI Personalized Birdwatching Adventure Planner</li>
                 <li>Personalized AI Personalized Reading List
+                <li>Personalized AI Personalized Reading List for Book Lovers</li>
+                <li>AI-Based Custom Model Train Setup Planner</li>
+                <li>Custom AI Personalized Genealogy Research Plan</li>
+                <li>AI-Powered Personalized Scrapbooking Layout Ideas</li>
+                <li>Personalized AI Personalized Home Brewing Recipe Suggestions</li>
+                <li>AI-Generated Personalized Astronomy Stargazing Schedule</li>
+                <li>Custom AI Personalized Photography Challenge Ideas</li>
+                <li>Personalized AI Custom Woodworking Project Generator</li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 NicheCraft Automation - All Rights Reserved</p>
+    </footer>
+</body>
+</html>
