--- a/index.html
+++ b/index.html
@@ -1,96 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NicheCraft Automation - Home</title>
-    <style>
-        body {
-            font-family: 'Orbitron', sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
-            margin: 0;
-            padding: 0;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NicheCraft Automation</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Orbitron', sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+    }
 
-        /* Futuristic Font */
-        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
+    .navbar {
+      background-color: #003366;
+      padding: 1rem;
+      text-align: center;
+    }
 
-        .container {
-            display: flex;
-            height: 100vh;
-        }
+    .navbar a {
+      color: #ffffff;
+      text-decoration: none;
+      margin: 0 15px;
+      font-size: 18px;
+      padding: 10px 20px;
+      border-radius: 5px;
+      background-color: #0059b3;
+      transition: background-color 0.3s ease;
+    }
 
-        /* Side Navigation Bar */
-        nav {
-            width: 250px;
-            background-color: #1c1c1c;
-            padding-top: 20px;
-        }
+    .navbar a:hover {
+      background-color: #004080;
+    }
 
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-        }
+    .navbar a.active {
+      background-color: #ff6600;
+    }
 
-        nav ul li {
-            margin: 20px 0;
-        }
-
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 18px;
-            display: block;
-            padding: 10px 15px;
-            transition: background-color 0.3s;
-        }
-
-        nav ul li a:hover {
-            background-color: #333;
-        }
-
-        .content {
-            flex: 1;
-            padding: 40px;
-            overflow-y: auto;
-        }
-
-        h1 {
-            font-size: 32px;
-            margin-bottom: 20px;
-        }
-
-        footer {
-            margin-top: 20px;
-            text-align: center;
-        }
-    </style>
+    .title {
+      text-align: center;
+      padding: 2rem 0;
+      font-size: 3rem;
+      color: #003366;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <!-- Side Navigation Bar -->
-        <nav>
-            <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="categories.html">CATEGORIES</a></li>
-                <li><a href="#">FULL LIST OF SERVICES</a></li> <!-- Remove for now -->
-                <li><a href="#">CONTACT</a></li>
-                <li><a href="#">DONATE TO A CHARITY</a></li>
-            </ul>
-        </nav>
 
-        <!-- Main Content -->
-        <div class="content">
-            <h1>Welcome to NicheCraft Automation</h1>
-            <p>Explore AI-driven services tailored to niche, underserved markets. Click on the links in the navigation bar to discover more.</p>
-        </div>
-    </div>
+  <div class="navbar">
+    <a href="home.html" class="active">Home</a>
+    <a href="categories.html">Categories</a>
+    <a href="services.html">Full List of Services</a>
+    <a href="contact.html">Contact</a>
+    <a href="donate.html">Donate to a Charity</a>
+    <a href="about.html">About</a>
+  </div>
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2024 NicheCraft Automation - All Rights Reserved</p>
-    </footer>
+  <div class="title">
+    NicheCraft Automation
+  </div>
+
 </body>
 </html>
