--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NicheCraft Automation</title>
+  <title>Home - NicheCraft Automation</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -28,21 +28,6 @@
       background-color: #0059b3;
       transition: background-color 0.3s ease;
     }
-
-    .navbar a:hover {
-      background-color: #004080;
-    }
-
-    .navbar a.active {
-      background-color: #ff6600;
-    }
-
-    .title {
-      text-align: center;
-      padding: 2rem 0;
-      font-size: 3rem;
-      color: #003366;
-    }
   </style>
 </head>
 <body>
@@ -55,10 +40,3 @@
     <a href="donate.html">Donate to a Charity</a>
     <a href="about.html">About</a>
   </div>
-
-  <div class="title">
-    NicheCraft Automation
-  </div>
-
-</body>
-</html>
