--- a/index.html
+++ b/index.html
@@ -1,23 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    .navbar a {
-      color: #ffffff;
-      text-decoration: none;
-      margin: 0 15px;
-      font-size: 18px;
-      padding: 10px 20px;
-      border-radius: 5px;
-      background-color: #0059b3;
-      transition: background-color 0.3s ease;
-    }
-
-    .navbar a:hover {
-      background-color: #004080;
-    }
-
-    .navbar a.active {
-      background-color: #ff6600;
-    }
-  </style>
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home - NicheCraft Automation</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
