--- a/index.html
+++ b/index.html
@@ -17,3 +17,23 @@
       padding: 1rem;
       text-align: center;
     }
+    .navbar a {
+      color: #ffffff;
+      text-decoration: none;
+      margin: 0 15px;
+      font-size: 18px;
+      padding: 10px 20px;
+      border-radius: 5px;
+      background-color: #0059b3;
+      transition: background-color 0.3s ease;
+    }
+
+    .navbar a:hover {
+      background-color: #004080;
+    }
+
+    .navbar a.active {
+      background-color: #ff6600;
+    }
+  </style>
+</head>
