--- a/index.html
+++ b/index.html
@@ -37,3 +37,13 @@
     }
   </style>
 </head>
+<body>
+
+  <div class="navbar">
+    <a href="home.html" class="active">Home</a>
+    <a href="categories.html">Categories</a>
+    <a href="services.html">Full List of Services</a>
+    <a href="contact.html">Contact</a>
+    <a href="donate.html">Donate to a Charity</a>
+    <a href="about.html">About</a>
+  </div>
