--- a/index.html
+++ b/index.html
@@ -47,3 +47,8 @@
     <a href="donate.html">Donate to a Charity</a>
     <a href="about.html">About</a>
   </div>
+  <div class="title">
+    NicheCraft Automation
+  </div>
+</body>
+</html>
