--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       padding: 1rem;
       text-align: center;
     }
+
     .navbar a {
       color: #ffffff;
       text-decoration: none;
@@ -35,6 +36,13 @@
     .navbar a.active {
       background-color: #ff6600;
     }
+
+    .title {
+      text-align: center;
+      padding: 2rem 0;
+      font-size: 3rem;
+      color: #003366;
+    }
   </style>
 </head>
 <body>
@@ -47,8 +55,3 @@
     <a href="donate.html">Donate to a Charity</a>
     <a href="about.html">About</a>
   </div>
-  <div class="title">
-    NicheCraft Automation
-  </div>
-</body>
-</html>
