--- a/index.html
+++ b/index.html
@@ -55,3 +55,9 @@
     <a href="donate.html">Donate to a Charity</a>
     <a href="about.html">About</a>
   </div>
+  <div class="title">
+    NicheCraft Automation
+  </div>
+
+</body>
+</html>
