--- a/index.html
+++ b/index.html
@@ -61,3 +61,12 @@
 
 </body>
 </html>
+  <div class="content">
+    <h2>Welcome to NicheCraft Automation</h2>
+    <p>
+      We specialize in offering 1000 unique, AI-powered services that cater to niche markets across the globe. 
+      Our automated platform ensures that no face-to-face interaction is needed, allowing you to enjoy fully 
+      personalized services at your convenience. Explore our wide range of services designed to bring you value 
+      quickly and efficiently. Let us help you achieve your goals with the power of automation.
+    </p>
+  </div>
