--- a/index.html
+++ b/index.html
@@ -91,3 +91,23 @@
       quickly and efficiently. Let us help you achieve your goals with the power of automation.
     </p>
   </div>
+  <style>
+    .footer {
+      background-color: #003366;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      position: fixed;
+      width: 100%;
+      bottom: 0;
+    }
+
+    .footer p {
+      margin: 0;
+      font-size: 14px;
+    }
+  </style>
+
+  <div class="footer">
+    <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
+  </div>
