--- a/index.html
+++ b/index.html
@@ -111,3 +111,35 @@
   <div class="footer">
     <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
   </div>
+  <style>
+    .container {
+      padding: 4rem 0;
+      text-align: center;
+    }
+
+    .container h2 {
+      color: #0059b3;
+      margin-bottom: 2rem;
+    }
+
+    .container p {
+      font-size: 1.2rem;
+      line-height: 1.8;
+      max-width: 800px;
+      margin: 0 auto 2rem;
+      color: #333;
+    }
+  </style>
+
+  <div class="container">
+    <h2>Your Automated Business Partner</h2>
+    <p>
+      NicheCraft Automation is here to provide the most seamless, personalized solutions for niche markets. 
+      With our cutting-edge AI technology, your journey to efficient and fully automated services has never been easier. 
+      From creative projects to financial management, we've got you covered.
+    </p>
+    <p>
+      Our goal is to empower you by offering solutions that scale and adapt to your specific needs. Explore our services 
+      today and discover how NicheCraft can streamline your business and personal needs with ease.
+    </p>
+  </div>
