--- a/index.html
+++ b/index.html
@@ -143,3 +143,20 @@
       today and discover how NicheCraft can streamline your business and personal needs with ease.
     </p>
   </div>
+  <style>
+    .navbar a {
+      color: #ffffff;
+      text-decoration: none;
+      margin: 0 15px;
+      font-size: 18px;
+      padding: 10px 20px;
+      border-radius: 5px;
+      background-color: #0059b3;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+
+    .navbar a:hover {
+      background-color: #004080;
+      transform: scale(1.05); /* Adds a slight zoom effect */
+    }
+  </style>
