--- a/index.html
+++ b/index.html
@@ -160,3 +160,8 @@
       transform: scale(1.05); /* Adds a slight zoom effect */
     }
   </style>
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
