--- a/index.html
+++ b/index.html
@@ -165,3 +165,13 @@
       scroll-behavior: smooth;
     }
   </style>
+  <style>
+    .divider {
+      height: 2px;
+      background-color: #0059b3;
+      margin: 2rem 0;
+      opacity: 0.7;
+    }
+  </style>
+
+  <div class="divider"></div>
