--- a/index.html
+++ b/index.html
@@ -167,12 +167,9 @@
   </style>
   <style>
     .divider {
-      height: 2px;
-      background-color: #0059b3;
+      border-top: 1px solid #0059b3;
       margin: 2rem 0;
-      opacity: 0.7;
     }
   </style>
 
   <div class="divider"></div>
-
