--- a/index.html
+++ b/index.html
@@ -167,9 +167,13 @@
   </style>
   <style>
     .divider {
-      border-top: 1px solid #0059b3;
-      margin: 2rem 0;
+      border-top: 4px solid #ff6600;  /* Increased thickness and changed to a bold orange color */
+      margin: 3rem 0;
+      width: 80%;
+      margin-left: auto;
+      margin-right: auto;
     }
   </style>
 
   <div class="divider"></div>
+
