--- a/categories.html
+++ b/categories.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Categories - NicheCraft Automation</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Orbitron', sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 2rem;
+    }
 
+    h2 {
+      text-align: center;
+      color: #0059b3;
+    }
+
+    .categories-list {
+      max-width: 800px;
+      margin: 2rem auto;
+      text-align: center;
+    }
+
+    .categories-list a {
+      display: block;
+      margin: 1rem 0;
+      font-size: 1.5rem;
+      color: #003366;
+      text-decoration: none;
+    }
+
+    .categories-list a:hover {
+      color: #ff6600;
+    }
+  </style>
+</head>
+<body>
+
+  <h2>Our Service Categories</h2>
+
+  <div class="categories-list">
+    <a href="category-creative-services.html">Creative Services Automation</a>
+    <a href="category-financial-services.html">AI-Powered Financial Services Automation</a>
+    <a href="category-education.html">Education & Learning Automation</a>
+    <a href="category-health-wellness.html">Health & Wellness Automation</a>
+    <a href="category-events.html">Event & Conference Automation</a>
+  </div>
+
+</body>
+</html>
