--- a/services.html
+++ b/services.html
@@ -1,1 +1,52 @@
-<a href="services.html">Full List of Services</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Full List of Services - NicheCraft Automation</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Orbitron', sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 2rem;
+    }
+
+    h2 {
+      text-align: center;
+      color: #0059b3;
+    }
+
+    .services-list {
+      max-width: 800px;
+      margin: 2rem auto;
+      text-align: center;
+    }
+
+    .services-list a {
+      display: block;
+      margin: 1rem 0;
+      font-size: 1.5rem;
+      color: #003366;
+      text-decoration: none;
+    }
+
+    .services-list a:hover {
+      color: #ff6600;
+    }
+  </style>
+</head>
+<body>
+
+  <h2>Full List of Services</h2>
+
+  <div class="services-list">
+    <a href="creative-content-generation.html">Creative Content Generation</a>
+    <a href="automated-marketing.html">Automated Marketing Services</a>
+    <a href="investment-reporting.html">Investment Reporting Automation</a>
+    <!-- Add more services as needed -->
+  </div>
+
+</body>
+</html>
