--- a/services.html
+++ b/services.html
@@ -50,3 +50,60 @@
 
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Creative Content Generation - NicheCraft Automation</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Orbitron', sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 2rem;
+      text-align: center;
+    }
+
+    h2 {
+      color: #0059b3;
+    }
+
+    p {
+      max-width: 800px;
+      margin: 2rem auto;
+      font-size: 1.2rem;
+      line-height: 1.6;
+    }
+
+    .purchase-btn {
+      padding: 1rem 2rem;
+      background-color: #ff6600;
+      color: white;
+      text-decoration: none;
+      font-size: 1.5rem;
+      border-radius: 5px;
+      display: inline-block;
+      margin-top: 2rem;
+    }
+
+    .purchase-btn:hover {
+      background-color: #cc5200;
+    }
+  </style>
+</head>
+<body>
+
+  <h2>Creative Content Generation</h2>
+
+  <p>
+    Our Creative Content Generation service uses AI to create custom articles, blog posts, and digital content that 
+    matches your exact requirements. Get quality content fast and efficiently.
+  </p>
+
+  <!-- PayPal button -->
+  <a class="purchase-btn" href="https://www.paypal.com/your-link-here">Buy Now</a>
+
+</body>
+</html>
