--- a/index.html
+++ b/index.html
@@ -62,3 +62,17 @@
 
 </body>
 </html>
+<!-- Updated Vertical navigation bar with links to other pages -->
+<div class="navbar">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="categories.html">Categories</a>
+    <a href="contact.html">Contact</a>
+</div>
+
+<!-- Main content area remains the same -->
+<div class="main">
+    <h1>Welcome to NicheCraft Automation</h1>
+    <p>Innovative AI-powered services for niche markets, fully automated and customizable.</p>
+</div>
