--- a/about.html
+++ b/about.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About - NicheCraft Automation</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="categories.html">Categories</a>
+        <a href="contact.html">Contact</a>
+    </div>
+    <div class="main">
+        <h1>About Us</h1>
+        <p>NicheCraft Automation is redefining digital service delivery with AI-powered solutions for niche markets.</p>
+    </div>
+</body>
+</html>
