--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
-<!-- Updated Vertical navigation bar with links to other pages -->
-<div class="navbar">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="services.html">Services</a>
-    <a href="categories.html">Categories</a>
-    <a href="contact.html">Contact</a>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home - NicheCraft Automation</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to the external stylesheet -->
+</head>
+<body>
+    <!-- Vertical navigation bar with links -->
+    <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="categories.html">Categories</a>
+        <a href="contact.html">Contact</a>
+    </div>
 
-<!-- Main content area remains the same -->
-<div class="main">
-    <h1>Welcome to NicheCraft Automation</h1>
-    <p>Innovative AI-powered services for niche markets, fully automated and customizable.</p>
-</div>
+    <!-- Main content area -->
+    <div class="main">
+        <h1>Welcome to NicheCraft Automation</h1>
+        <p>Innovative AI-powered services for niche markets, fully automated and customizable.</p>
+    </div>
+</body>
+</html>
