--- a/about.html
+++ b/about.html
@@ -1,3 +1,3 @@
     <div class="main">
         <!-- Banner Image at the top -->
-        <img src="C:\Users\filml\OneDrive\Documents\PROMPTS FOR WEBSITE DESIGN AND LIST OF SERVICES/banner for a website's 'About' page.jpg" alt="NicheCraft Automation" style="width:100%; height:auto; margin-bottom: 20px;">
+        <img src=C:\Users\filml\OneDrive\Documents\PROMPTS FOR WEBSITE DESIGN AND LIST OF SERVICES/banner for a website's 'About' page.jpg alt="NicheCraft Automation" style="width:100%; height:auto; margin-bottom: 20px;">
