--- a/about.html
+++ b/about.html
@@ -18,3 +18,9 @@
             Our AI doesn't just adapt to the market—it creates solutions no one else has thought of. 
             We deliver innovative, tailored services faster than anyone else.
         </p>
+        <!-- Testimonials Section -->
+        <h2 style="font-size: 28px; color: #00bfa5; text-transform: uppercase; margin-top: 40px;">What Our Clients Say</h2>
+        <p style="font-size: 18px; color: #555; font-style: italic;">"NicheCraft Automation created a custom solution for me in minutes. It was exactly what I needed, without me lifting a finger, and the price was unbeatable!"</p>
+        <p style="font-size: 16px; font-weight: bold;">- A Happy Client</p>
+        <p style="font-size: 18px; color: #555; font-style: italic;">"I've never seen anything like this—AI custom-built the perfect service for my business, and it was delivered instantly. No hassles, no fuss."</p>
+        <p style="font-size: 16px; font-weight: bold;">- Another Satisfied Customer</p>
