--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
     <div class="main">
-        <!-- Banner Image at the top -->
-        <img src="images/About_banner.jpg" alt="NicheCraft Automation" style="width:100%; height:auto; margin-bottom: 20px;">
+        <!-- Resized Banner Image at the top -->
+<img src="images/About_banner.jpg" alt="NicheCraft Automation" style="max-width: 50%; height: auto; margin-bottom: 20px; display: block; margin-left: auto; margin-right: auto;">
         <h1>About Us</h1>
         <p><strong>NicheCraft Automation</strong> redefines digital service delivery with AI-driven, fully automated solutions targeting untapped niche markets. Our innovative services are unique, scalable, and 100% digital, offering personalized results with zero human interaction.</p>
         <p>If there isn’t an automated service already offered on the website, AI will instantly create it for you, pricing it affordably to meet your needs. With NicheCraft Automation, every client receives a tailored experience without the need for physical handling or direct communication.</p>
