--- a/services.html
+++ b/services.html
@@ -31,3 +31,8 @@
     </div>
 </body>
 </html>
+<h2>Service Categories</h2>
+<ul>
+    <li><a href="ai-content-creation.html">AI-Powered Content Creation</a> - $49.99</li>
+    <!-- Other services go here -->
+</ul>
