--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services - NicheCraft Automation</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Ensure the styles are linked properly -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="navbar">
@@ -17,22 +17,9 @@
 
     <div class="main">
         <h1>Our Services</h1>
-        <p>Explore our wide range of automated digital services designed to serve niche markets.</p>
-
-        <h2>Service Categories</h2>
         <ul>
-            <li><a href="#">Category 1: AI-Powered Content Creation</a></li>
-            <li><a href="#">Category 2: Automated SEO Optimization</a></li>
-            <li><a href="#">Category 3: Custom Software Solutions</a></li>
-            <li><a href="#">Category 4: Digital Marketing Automation</a></li>
-            <li><a href="#">Category 5: Data Analytics & Insights</a></li>
-            <!-- Add more categories here -->
+            <li><a href="ai-content-creation.html">AI-Powered Content Creation</a> - $49.99</li>
         </ul>
     </div>
 </body>
 </html>
-<h2>Service Categories</h2>
-<ul>
-    <li><a href="ai-content-creation.html">AI-Powered Content Creation</a> - $49.99</li>
-    <!-- Other services go here -->
-</ul>
