--- a/categories.html
+++ b/categories.html
@@ -14,14 +14,17 @@
         <a href="categories.html">Categories</a>
         <a href="contact.html">Contact</a>
     </div>
+
     <div class="main">
-        <h1>Service Categories</h1>
-        <p>Explore different categories of automated services we offer.</p>
+        <h1>Categories</h1>
+        <ul>
+            <li><a href="#content-creation">Content Creation</a></li>
+        </ul>
+
+        <h2 id="content-creation">Content Creation</h2>
+        <ul>
+            <li><a href="ai-content-creation.html">AI-Powered Content Creation</a></li>
+        </ul>
     </div>
 </body>
 </html>
-<h2>Service Categories</h2>
-<ul>
-    <li><a href="ai-content-creation.html">AI-Powered Content Creation</a> - $49.99</li>
-    <!-- Other services go here -->
-</ul>
