--- a/ai-content-creation.html
+++ b/ai-content-creation.html
@@ -20,7 +20,7 @@
         <p>This service helps you generate high-quality, SEO-friendly articles, blog posts, and social media content using AI. Perfect for businesses and bloggers who need content quickly and affordably.</p>
 
         <p>Price: $49.99</p>
-        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=YOUR_PAYPAL_EMAIL&item_name=AI+Powered+Content+Creation&amount=49.99&currency_code=USD">
+        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=nichecraftmaster@gmail.com&item_name=AI+Powered+Content+Creation&amount=49.99&currency_code=USD">
             <button>Purchase Service</button>
         </a>
     </div>
