--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NicheCraft Automation</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to NicheCraft Automation</h1>
+        <p>AI-driven automation solutions for businesses.</p>
+    </header>
 
+    <nav>
+        <ul>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section>
+        <h2>AI Business Automation</h2>
+        <p>Explore our high-value services that streamline operations and drive growth using the power of automation.</p>
+        <a href="services.html" class="cta-button">View Services</a>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 NicheCraft Automation</p>
+    </footer>
+</body>
+</html>
