--- a/product-template.html
+++ b/product-template.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Product Name - NicheCraft Automation</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <main>
+        <h1>Product Name</h1>
+        <p>Product Description goes here.</p>
+        <ul>
+            <li>Key Benefit 1</li>
+            <li>Key Benefit 2</li>
+            <li>Key Benefit 3</li>
+        </ul>
+        <a href="your-affiliate-link" class="button">Buy Now</a>
+    </main>
+</body>
+</html>
