--- a/contact.html
+++ b/contact.html
@@ -25,3 +25,12 @@
     </main>
 </body>
 </html>
+<footer>
+    <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="products.html">Products</a>
+        <a href="blog.html">Blog</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+</footer>
